<resources>
    <string name="app_name">SecuredPlayerTestApp</string>
    <string name="btnGetProfileRtp">Get Profile</string>
    <string name="btnPlayCanalPlusSD">Canal+ SD</string>
    <string name="btnPlayCanalPlusHD">Canal+ HD</string>
    <string name="btnPlayCanalCinemaSD">Canal+ Cinema SD</string>
    <string name="btnPlayCanalCinemaHD">Canal+ Cinema HD</string>
    <string name="btnPlayTF1HD">TF1 HD</string>
    <string name="btnPlayM6HD">M6 HD</string>
    <string name="btnPlayDorcelHD">Dorcel HD</string>
    <string name="btnPlayXXLHD">XXL HD</string>
    <string name="btnPlayHls">Play HLS</string>
    <string name="btnPlayRtp">Play RTP</string>
    <string name="btnPlayRtpAdult">Play Adult RTP</string>
    <string name="btnPlayRtpNoRights">Play not subscribe RTP</string>
    <string name="btnPlayVod">Play VOD</string>
    <string name="btnPlayMedia">Play MEDIA</string>
    <string name="btnPlayIp">Play</string>
    <string name="btnSeek">Seek</string>
    <string name="btnStop">Stop</string>
    <string name="btnMoveResize">Move/Resize</string>
    <string name="btnMove">Move</string>
    <string name="btnResize">Resize</string>
    <string name="btnGetState">State</string>
    <string name="editPlayIp">Saisie l\'adresse Ip souhaitée...</string>
    <string name="btnGetAvailableLanguages">Available languages</string>
    <string name="btnGetCurrentLanguage">Current language</string>
    <string name="btnSetCurrentLanguage">Set language</string>
    <string name="btnUnlockMorality">Unlock Morality</string>
    <string name="btnShowSubtitles">Show Subtitles</string>
    <string name="txtInfo"></string>
    <string name="txtCallbackState"></string>
    <string name="btnGetAvailableSubtitles">getAvailableSubtitles</string>
    <string name="btnGetCurrentSubtitle">getCurrentSubtitle</string>
    <string name="btnSetCurrentSubtitle">setCurrentSubtitle</string>
    <string name="btnGetSpeed">getSpeed</string>
    <string name="btnSetSpeed">setSpeed</string>
    <string name="btnGetCurrentPosition">getCurrentPosition</string>
    <string name="btnGetDuration">getDuration</string>
    <string name="btnGetUniverse">getUniverse</string>
    <string name="btnSetUniverse">setUniverse</string>
    <string name="btnGetPanelSize">getPanelSize</string>
    <string name="CanalPlusSD">rtp://233.136.0.113:65000</string>
    <string name="CanalPlusHD">rtp://233.32.36.187:65000</string>
    <string name="CanalCinemaSD">rtp://233.136.0.168:65000</string>
    <string name="CanalCinemaHD">rtp://233.32.36.21:65000</string>
    <string name="TF1HD">rtp://233.32.36.185:65000</string>
    <string name="M6HD">rtp://239.3.0.2:65000</string>
    <string name="DorcelHD">rtp://233.32.36.9:65000</string>
    <string name="XXLHD">rtp://233.136.0.161:65000</string>
    <string name="RtpAdult">rtp://233.136.44.168:7500</string>
    <string name="RtpNoRights">rtp://233.32.36.36:7500</string>
    <string name="separator">--</string>
</resources>
