<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/mainLayout"
    android:gravity="center">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_alignParentTop="@+id/videoView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/mainLinearLayout"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnPlayRtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnPlayRtp">
                <requestFocus />
            </Button>

            <Button
                android:id="@+id/btnPlayHls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnPlayHls">
                <requestFocus />
            </Button>

            <Button
                android:id="@+id/btnPlayVod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnPlayVod"/>

            <Button
                android:id="@+id/btnPlayMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnPlayMedia"/>

            <Button
                android:id="@+id/btnSeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSeek"/>

            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnStop"/>

            <Button
                android:id="@+id/btnResize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnResize"/>

            <Button
                android:id="@+id/btnMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMove"/>

            <Button
                android:id="@+id/btnUnlockMorality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnUnlockMorality"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGetAvailableSubtitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGetAvailableSubtitles"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get plane size"
                android:id="@+id/btnGetPlaneSize" />

            <Button
                android:id="@+id/btnGetCurrentSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGetCurrentSubtitle"/>

            <Button
                android:id="@+id/btnSetCurrentSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSetCurrentSubtitle"/>

            <Button
                android:id="@+id/btnShowSubtitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnShowSubtitles"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnGetSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGetSpeed"/>

            <Button
                android:id="@+id/btnSetSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSetSpeed"/>

            <Button
                android:id="@+id/btnGetCurrentPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGetCurrentPosition"/>

            <Button
                android:id="@+id/btnGetDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGetDuration"/>

            <Button
                android:id="@+id/btnGetUniverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGetUniverse"/>

            <Button
                android:id="@+id/btnSetUniverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSetUniverse"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnGetState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGetState"/>

            <Button
                android:id="@+id/btnGetAvailableLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGetAvailableLanguages"/>

            <Button
                android:id="@+id/btnGetCurrentLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnGetCurrentLanguage"/>

            <Button
                android:id="@+id/btnSetCurrentLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSetCurrentLanguage"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/txtInfo" />

            <TextView
                android:id="@+id/txtCallbackState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/txtCallbackState" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
